<resources>
    <string name="app_name">Login</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="fullName">Name</string>
    <string name="newPassword">Password</string>
    <string name="btnRegister">Register</string>
    <string name="newUsername">Username</string>
    <string name="verifypassword">Verify Password</string>
    <string name="_000">000</string>
    <string name="create_shark">CREATE SHARK</string>
    <string name="select_an_egg">SELECT AN EGG</string>
    <string name="whale">whale</string>
    <string name="hammerhead">hammerhead</string>
    <string name="greatwhite">greatwhite</string>
    <string name="_1000">1000</string>
    <string name="shark">shark</string>
    <string name="smiley">smiley</string>
    <string name="title_activity_inventory">InventoryActivity</string>
</resources>
